k8s/product-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: node-microservices
  name: product-service-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: product-service
  template:
    metadata:
      labels:
        app.kubernetes.io/name: product-service
    spec:
      containers:
      - name: product-service
        image: 311141533055.dkr.ecr.ap-south-1.amazonaws.com/product-service:latest
        ports:
        - containerPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  namespace: node-microservices
  name: product-service
spec:
  selector:
    app.kubernetes.io/name: product-service
  ports:
  - port: 80
    targetPort: 3002
  type: ClusterIP
