k8s/user-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: node-microservices
  name: user-service-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: user-service
  template:
    metadata:
      labels:
        app.kubernetes.io/name: user-service
    spec:
      containers:
      - name: user-service
        image: 311141533055.dkr.ecr.ap-south-1.amazonaws.com/user-service:latest
        ports:
        - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  namespace: node-microservices
  name: user-service
spec:
  selector:
    app.kubernetes.io/name: user-service
  ports:
  - port: 80
    targetPort: 3001
  type: ClusterIP
